	7621 Token_of_Ziegfried		Revive player on death (if item is in inventoy? Needs a clearer description)
	Still need proper rates for most 11.3 Equipment that don't have their +rates/Status Infliction rates clearly defined.
	13107 Western_Outlaw		Need correct HIT and ASPD Rate
	----
========================
07/26
	* Rev. 10917 Updated Cash Shop Skill Scrolls to behave more like official scrolls. [L0ne_W0lf]
	- Kafra Card, Neuralizer, Giant Fly Wing and Dungeon teleport scroll now call functions.
	  The functions for these items are found in /npc/other/CashShop_Functions.txt
	* Fixed Tidal Shoes missing HP bonus. (Thanks to ZephyrShakuraus)
	* Reverted change of Taming items item-type back to 11 because of a bug.
	* Fixed Fireball and Firewall mob skill level [Playtester]
07/24
	* Updated Venom Splasher's bomb timer [DracoRPG]
	* Added Job_Alchemist constant, Job_Alchem should now be considered deprecated [DracoRPG]
07/15
	* Rev. 10885 Fixed incorrect skill ID for Lady Tany's Expulsion. [L0ne_W0lf]
	* Corrected the AegisName for "Fresh Fish." Should have been "Delicious_Fish"
	* Rev. 10884 Fixed incorrect skill ID for Thanatos's Expulsion. [L0ne_W0lf]
	* Rev. 10883 Fixed Blue Drooping Kitty again (extra comma.) [L0ne_W0lf]
07/13
	* Rev. 10879 Updated "Name" fields for 11.2 headgears. [L0ne_W0lf]
	* Rev. 10877 Fixed Blue Drooping Kitty. (Missing comma) Thanks to diedlikeahero [L0ne_W0lf]
07/10
	* Rev. 10876 G_Bacsojin will summon G_Spring_Rabbit now instead of Green Iguana. [L0ne_W0lf]
	* Fixed some of the episode 11.2 monsters not using the proper level for some of their skills. 
07/09
	* Rev. 10873 Commented out two questionable Marine Sphere skills. [L0ne_W0lf]
	* Rev. 10872 More mob_skill_db.txt updates. [L0ne_W0lf]
	- Added Fiber Lock to Argos and Close Confine to Drosera.
	- Fixed monsters in Thanatos Tower and past using "Bash" instead of "Provoke"
	- Added Two-hand Quicken to Incantation Samurai.
	- Several additional updates to other monster skills.
07/08