@@ -4,6 +4,8 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2007/07/27
+	* Simplified exp gain equations (now more FPU-friendly and precise)
+	- also fixes the uninitialized variable problem... sorry 'bout that >.>
 	* Changed the way hit bonus is applied.
 	   http://www.eathena.ws/board/index.php?showtopic=157438 [Vicious]
 	* Cleaned up mob drop code, crashfix is still needed though...
