@@ -48,6 +48,8 @@
 	13107 Western_Outlaw		Need correct HIT and ASPD Rate
 	----
 ========================
+07/27
+	* Fixed Neuralizer item script typo [ultramage]
 07/26
 	* Rev. 10917 Updated Cash Shop Skill Scrolls to behave more like official scrolls. [L0ne_W0lf]
 	- Kafra Card, Neuralizer, Giant Fly Wing and Dungeon teleport scroll now call functions.
